<resources>
    <string name="app_name">A$AP College</string>
    <string name="what">What</string>
    <string name="textview">TextView</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">register</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="email1">Email</string>
    <string name="title_activity_npat_form">npat_form</string>
</resources>
