<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:background="@drawable/backfinal"
    android:paddingRight="16dp">

    <Button
        android:id="@+id/button2"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="497dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_round"
        android:text="@string/login" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="200dp"
        android:background="@drawable/edit_round"
        android:paddingLeft="20dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="" tools:targetApi="o"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="200dp"
        android:background="@drawable/edit_round"
        android:paddingLeft="20dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="370dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="" tools:targetApi="o"/>

    <Button
        android:id="@+id/button"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="228dp"
        android:layout_marginLeft="228dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:background="@drawable/button_round"
        android:text="@string/sign_up" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:textSize="50dp"
        android:textColor="#FF5722"
        android:fontFamily="sans-serif-black"
        android:layout_centerHorizontal="true"
        android:text="LOGIN" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="605dp"
        android:text="New User ?"
        android:textColor="#ff5722"
        android:textSize="25dp" />

</RelativeLayout>
