<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3194f6"
    android:padding="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/homepagebuttons"
        >
    <EditText
        android:id="@+id/editText2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:autofillHints=""
        android:drawablePadding="20dp"
        android:paddingLeft="20dp"
        android:background="@drawable/edit_round"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:targetApi="o" />

    <Button
        android:id="@+id/button"
        android:layout_width="107dp"
        android:background="@drawable/button_round"
        android:layout_height="72dp"
        android:layout_marginTop="500dp"
        android:layout_centerHorizontal="true"
        android:text="@string/register" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@drawable/edit_round"
        android:paddingLeft="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@drawable/edit_round"
        android:paddingLeft="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:autofillHints="" tools:targetApi="o"
         />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="200dp"
        android:background="@drawable/edit_round"
        android:paddingLeft="20dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="" tools:targetApi="o"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:textColor="#ff5722"
        android:textSize="50dp"
        android:fontFamily="sans-serif-black"
        android:layout_centerHorizontal="true"
        android:text="SIGN UP" />
    </RelativeLayout>


</RelativeLayout>
